# Beer-Game

./: .gitignore  LICENSE  README.md
Sprint 2/: README.md
Sprint 2/doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  class_factory-members.html  class_factory.html  class_game-members.html  class_game.html  class_game__ui-members.html  class_game__ui.html  class_instructor-members.html  class_instructor.html  class_main_window-members.html  class_main_window.html  class_order-members.html  class_order.html  class_player-members.html  class_player.html  classes.html  classinstructor__ui-members.html  classinstructor__ui.html  classplayer__ui-members.html  classplayer__ui.html  classsample-members.html  (+45 more)
Sprint 2/src/: factory.h  game.h  instructor.h  player.h
Sprint 3/doc/: Doxyfile.in
Sprint 3/src/: CMakeLists.txt  game.cpp  game.pro  instrgameui.cpp  instrgameui.ui  instructorui.cpp  instructorui.ui  main.cpp  mainwindow.cpp  mainwindow.ui  order.cpp  playerui.cpp  playerui.ui  resource.qrc  shipment.cpp
Sprint 4/Beergame/src/: CMakeLists.txt  game.pro  instructorui.cpp  mainwindow.cpp  mainwindow.ui  player.cpp  playerui.cpp  resource.qrc
Sprint 4/Beergame/src/include/: instructorui.h  mainwindow.h  player.h  playerui.h
Sprint 4/src/: game.cpp  instructor.cpp  instructorui.ui  playerEvent.cpp  playerui.ui
Sprint 5/: CMakeLists.txt  README.md  references.txt
Sprint 5/docs/: CMakeLists.txt  Doxyfile.in
Sprint 5/src/: CMakeLists.txt  game.cpp  game.h  instructor.cpp  instructor.h  instructorwindow.h  order.h  player.h  playerevent.h  playerinterface.h  shipment.h
Sprint 5/src/client/: CMakeLists.txt  ClientInterface.ui  clientinterface.cpp  clientinterface.h  main.cpp  playerclient.cpp  playerclient.h  resource.qrc  showgraph.cpp  showgraph.h  showgraph.ui
Sprint 5/test/: CMakeLists.txt  tests.cpp  tests_game_logics.cpp
(+94 files in other folders)
